Add latest show

--- a/_includes/assets/css/sass/_utilities.scss
+++ b/_includes/assets/css/sass/_utilities.scss
@@ -259,7 +259,7 @@
 }
 
 .next--show {
-  border: 1px dotted grey;
+  border: 1px dashed grey;
   max-width: 300px;
   position: relative;
   transform: skewY(-10deg);
