--- a/_includes/layouts/show.njk
+++ b/_includes/layouts/show.njk
@@ -15,7 +15,7 @@ section: post
   </div>
 </article>
 <figure class="align--center internal--image">
-  <img src="{{ featuredImage }}" alt="{{ alt }}" loading="lazy" width="1080" height="1080"> 
+  <img src="{{ featuredImage }}" alt="{{ alt }}" loading="lazy"> 
 </figure>
 
 <article class="container article-body">
