--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -16,9 +16,9 @@ permalink: /shows/index.html
 		  <div class="next--show-copy">
         <h3 class="show--card-name">
           Next show
-			    <span class="sub--title">24 July 2020</span>
+			    <span class="sub--title">28 August 2020</span>
 		    </h3>
-        <p class="show--summary">Drum and Bass / Jungle</p>
+        <p class="show--summary">Miscellanea</p>
       </div>
     </article>
     {% set showlist = collections.show %}
