Add copy change

--- a/_includes/assets/css/sass/_utilities.scss
+++ b/_includes/assets/css/sass/_utilities.scss
@@ -154,7 +154,7 @@
 
 .three--column--grid {
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));;
-	grid-gap: 2rem;
+	grid-gap: 5rem 2rem;
 }
 
 .flex {
