--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -18,7 +18,8 @@ permalink: /shows/index.html
           Next show
 			    <span class="sub--title">28 August 2020</span>
 		    </h3>
-        <p class="show--summary">Miscellanea</p>
+        <p class="show--summary">Miscellanea<br>
+        Songs for these times</p>
       </div>
     </article>
     {% set showlist = collections.show %}
