--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,8 +2,9 @@
 layout: layouts/base.njk
 section: page
 ---
-<section class="content--container">
+<section class="container content--container single--page">
   <h1 class="page--title">{{ title }}</h1>
+
   <article class="textual--content">
     {{ layoutContent | safe }}
   </article>
