--- a/_includes/assets/css/sass/_layout.scss
+++ b/_includes/assets/css/sass/_layout.scss
@@ -4,6 +4,12 @@
   background-color: #fbf9fe;
 }
 
+.two--column-50 {
+  display: grid;
+  grid-gap: 4rem;
+  grid-template-columns: 1fr 1fr;
+}
+
 .featured--column-grid {
   align-items: start;
   grid-template-columns: 2fr 1fr;
@@ -40,7 +46,7 @@
   > div {
     display: grid;
     grid-gap: 2rem;
-    grid-auto-rows: minmax(auto, 120px);
+    // grid-auto-rows: minmax(auto, 120px);
   }
 
   //// !!! remmebr to put back when there are more posts
@@ -73,7 +79,6 @@
 }
 
 .empty--posts {
-  display: none !important;
   border: 1px dashed grey;
   max-width: 300px;
   padding: 1rem 1.5rem;
@@ -83,6 +88,21 @@
   }
 
 }
+
+// About page
+
+.community--link {
+  color: var(--base);
+  font-size: 0.875rem;
+  text-decoration: none;
+
+  h3 {
+    color: var(--accent);
+    text-transform: uppercase;
+  }
+
+}
+
 
 // Some browser resets
 
