--- a/_includes/components/home-components/hero.njk
+++ b/_includes/components/home-components/hero.njk
@@ -69,7 +69,7 @@
 <div class="with-bg p-t-48">
   <section class="main-home container">
     <h2 class="m-t-0">Times We Used To Spend</h2>
-    <p class="lead"><em>Times We Used To Spend</em> is my monthly radio show, in which I play some records from my collection. It's hosted by <a href="https://www.mixcloud.com/TheOtherRadio/" target="_blank" rel="noopener noreferrer">The Other Radio</a>.</p>
+    <p class="lead"><a href="/show/"><em>Times We Used To Spend</em></a> is my monthly radio show, in which I play some records from my collection. It's hosted by <a href="https://www.mixcloud.com/TheOtherRadio/" target="_blank" rel="noopener noreferrer">The Other Radio</a>.</p>
     <section class="grid three--column--grid list--shows">
       {% set showlist = collections.show %}
       {% include "components/showlist.njk" %}
