--- a/_includes/assets/css/sass/_mobile-menu.scss
+++ b/_includes/assets/css/sass/_mobile-menu.scss
@@ -92,13 +92,13 @@
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
-  .main--nav ul {
-    display: flex;
-    flex-direction: row;
-    padding-left: 6vh;
-  }
-  .menu-icon {
-    display: none;
-  }
-}
+// @media (min-width: 48em) {
+//   .main--nav ul {
+//     display: flex;
+//     flex-direction: row;
+//     padding-left: 6vh;
+//   }
+//   .menu-icon {
+//     display: none;
+//   }
+// }
