--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -15,7 +15,10 @@ section: page
       <img src="/static/images/justinslackportrait.JPG" alt="">
     </figure>
   </section>
-  <section class="two--column-50">
+</section>
+
+<div class="with-bg p-t-48">
+  <section class="two--column-50 container">
     <div>
       <h2>Community</h2>
       <p>Building communities is an essential part of what I do. In 2012 I co-founded the Cape Town Front-end Developer meetup and in 2019 the non-profit Front-end Developers South Africa. We have run over 80 monthly talks and workshops and at last count have over 2700 members. In addition to organising community events I also speak at conferences and meetups and have run a number of workshops.</p>
@@ -24,22 +27,23 @@ section: page
     </div>
     <div>
       <h2>Community links</h2>
-      <a class="community--link" href="https://fedsa.org" target="_blank">
+      <a class="community--link" href="https://fedsa.org" target="_blank" rel="noopener noreferrer"></a>
         <h3>FEDSA</h3>
         <p>Front-end Developers South Africa (previously Cape Town Front-end Developers) is a registered non-profit organisation supporting the advancement of front-end development in South Africa (new website coming soon).</p>
       </a>
-      <a class="community--link" href="https://www.meetup.com/fedsa-community/" target="_blank">
+      <a class="community--link" href="https://www.meetup.com/fedsa-community/" target="_blank" rel="noopener noreferrer">
         <h3>FEDSA Meetup Group</h3>
         <p>We're a group of Cape Town-based web developers and designers passionate about the technologies we work with on a daily basis, and we're keen to share what we've learnt. Join the Meetup group to stay up to date with events, talks and workshops.</p>
       </a>
-      <a class="community--link" href="https://codebridge.org.za/" target="_blank">
+      <a class="community--link" href="https://codebridge.org.za/" target="_blank" rel="noopener noreferrer">
         <h3>Codebridge</h3>
         <p>Codebridge is an open community at the intersection of civic-tech and social change, comprising programmers, activists, data analysts, designers, human rights lawyers, government officials, journalists, visual artists, storytellers and other professions who collaborate on social change projects.</p>
       </a>
-      <a class="community--link" href="https://www.meetup.com/Codebridge/" target="_blank">
-        <h3>Codebridge Newlands Meetup Group</h3>
+      <a class="community--link" href="https://www.meetup.com/Codebridge/" target="_blank" rel="noopener noreferrer">
+        <h3>Codebridge Newlands Community Evening</h3>
         <p>Join the Meetup group to get involved and lend your expertise to civic tech projects.</p>
       </a>
     </div>
   </section>
-</section>
+
+</div>
