--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -7,16 +7,42 @@ section: page
 
   <section class="two--column-50">
     <div>
-      <p>My work lives at the intersection of design and code</p>
-      <p>At <a href="http://https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a> I lead the design and front-end team. We are responsible for all UI design, front-end builds and design system creation. Over the last few years I have put in place design operations for a range of applications, from large financial services platforms to JAMstack based static sites.</p>
-      <p></p>
+      <p class="lead">My work lives at the intersection of design and code.</p>
+      <p>At <a href="http://https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a> I lead the design and front-end team. We are responsible for all UI design, front-end builds and design system creation. Over the last few years we have put in place design operations for a range of applications, from large financial services platforms to JAMstack based static sites.</p>
+      <p>Visit the NML <a target="_blank" href="https://nml.co.za/work/" rel="noopener noreferrer">Work</a> page for case studies of projects completed over the last six years.</p>
     </div>
-    <!-- <figure>
-      <img src="/static/images/justinslackportrait.JPG" alt="">
-    </figure> -->
+    <figure>
+      <svg id="afbb12ab-d087-497f-9940-dba3fbb87ae2" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="550" height="270" viewBox="0 0 550 270"><path d="M269.38,200.59a2.9,2.9,0,0,0-1.39-2.14l-20.62-12.37a2.92,2.92,0,0,0-3.56.45l-2.06,2.06L236.18,183a35,35,0,0,0-6.81-39.8c-12.94-12.94-67.09-27-69.38-27.57a2.91,2.91,0,0,0-2.79.76l-4.12,4.12a3,3,0,0,0-.8,2.59c2.26,12.38,16.06,58,27.61,69.58a34.92,34.92,0,0,0,39.8,6.81l5.57,5.57-2.06,2.06a2.9,2.9,0,0,0-.44,3.56l12.37,20.62a2.88,2.88,0,0,0,2.15,1.39,2.17,2.17,0,0,0,.36,0,2.87,2.87,0,0,0,2.06-.86L268.57,203a3,3,0,0,0,.81-2.42Zm-85.38-12c-9.13-9.13-21.17-46.08-25.06-62.17l31.55,31.53a11.67,11.67,0,1,0,4.13-4.13l-31.23-31.22c13.67,3.78,52.13,15,61.86,24.74a29.19,29.19,0,0,1,4.67,35.08l0,.05a28.48,28.48,0,0,1-4.64,6.12,29.22,29.22,0,0,1-41.25,0ZM200.5,158a5.82,5.82,0,1,1-4.12,1.7,5.82,5.82,0,0,1,4.12-1.7Zm24.37,38.45a32.7,32.7,0,0,0,8.24-8.24l4.5,4.49L229.36,201Zm13.33,28.66-9.28-15.47,17.4-17.4,15.47,9.28Z" fill="#00a1e0"/><path d="M133.62,109.82a11.6,11.6,0,0,0,10-10.6,55.4,55.4,0,0,1,35.08-12.56h20.42v5.83h17.49V75H199.15v5.83H178.73a61.29,61.29,0,0,0-36.41,12c-.1-.18-.19-.37-.3-.55L167.34,66.4a14.68,14.68,0,1,0-4-4.28L137.86,88.24a11.5,11.5,0,0,0-5.79-1.59,11.67,11.67,0,0,0-11.66,11.66,11.53,11.53,0,0,0,1.73,6l-22.42,23a14.65,14.65,0,1,0,4,4.28l22.64-23.16c.3.17.59.34.89.48a62,62,0,0,0-9.73,33.17v20.42h-5.83V180h17.49V162.48h-5.83V142.06a56.15,56.15,0,0,1,10.3-32.23Zm71.36-29h5.83v5.83H205Zm-29.16-35a8.75,8.75,0,1,1-8.75,8.75A8.76,8.76,0,0,1,175.82,45.82ZM132.07,92.48a5.79,5.79,0,0,1,3.79,1.43,3.37,3.37,0,0,0,.21.31,2.37,2.37,0,0,0,.33.22,5.76,5.76,0,0,1,1.51,3.87,5.83,5.83,0,0,1-5.83,5.83,5.76,5.76,0,0,1-3.77-1.42c-.08-.09-.11-.21-.2-.3a2.39,2.39,0,0,0-.34-.21,5.81,5.81,0,0,1,4.3-9.73ZM91.24,147.89a8.75,8.75,0,1,1,8.75-8.75A8.75,8.75,0,0,1,91.24,147.89Zm32.09,26.24H117.5V168.3h5.83Z" fill="#00a1e0"/><path d="M356.77,89.66a3.86,3.86,0,0,0-5.46,0L306,134.94a3.86,3.86,0,0,0,0,5.46l45.29,45.29a3.86,3.86,0,0,0,2.74,1.13,3.93,3.93,0,0,0,2.73-1.13,3.86,3.86,0,0,0,0-5.46l-42.56-42.55,42.55-42.56a3.86,3.86,0,0,0,0-5.46Z" fill="#00a1e0"/><path d="M418.59,185.69a3.87,3.87,0,0,0,2.74,1.12,3.92,3.92,0,0,0,2.73-1.12l45.28-45.28a3.86,3.86,0,0,0,0-5.46L424.05,89.66a3.86,3.86,0,0,0-5.46,5.46l42.56,42.55-42.56,42.55a3.86,3.86,0,0,0,0,5.46Z" fill="#00a1e0"/><path d="M370.8,186.82a3.86,3.86,0,0,0,3.6-2.47l34.92-90.58a3.86,3.86,0,1,0-7.2-2.77L367.2,181.58a3.84,3.84,0,0,0,2.21,5,3.8,3.8,0,0,0,1.39.26Z" fill="#00a1e0"/></svg>
+    </figure>
   </section>
 
-  <article class="textual--content">
+  <!-- <article class="textual--content">
     {{ layoutContent | safe }}
-  </article>
+  </article> -->
 </section>
+
+<div class="with-bg p-t-48">
+  <section class="container two--column-50">
+    <div>
+      <h2>Teaching</h2>
+      <img src="/static/images/posts/fod.png" alt="Academy of Digital Arts" class="fod-logo">
+      <p>For many years I taught UI design, HTML, CSS and JavaScript on both the full- and part-time programmes at the <a href="https://www.ada.ac.za/" target="_blank" rel="noopener noreferrer">Academy of Digital Arts</a> (formerly Friends of Design). In addition to teaching I designed course curricula, outcomes and study material for a range of student levels.</p>
+      <p>I continue to teach workshops and give talks at meetups and conferences. Read more about those activities on the <a href="/about/">About page</a>.</p>
+    </div>
+    <div>
+      <h2>Personal projects</h2>
+      <div>
+        <a href="https://budgetjusticesa.org" class="post--card flex" target="_blank" rel="noopener noreferrer">
+          <figure class="recent--image block">
+            <img src="/static/images/posts/bjc.png" alt="">
+          </figure>
+          <div>
+            <h4 class="m-t-0">Budget Justice Coalition</h4>
+            <p>Data platform for the Budget Justice Coalition, a civil society coalition.</p>
+          </div>
+        </a>
+      </div>
+      <div class="empty--posts with-bg"><p class="f-1">More projects coming soon</p></div>
+    </div>
+  </section>
+</div>
