Errant anchor tag

--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -27,7 +27,7 @@ section: page
     </div>
     <div>
       <h2>Community links</h2>
-      <a class="community--link" href="https://fedsa.org" target="_blank" rel="noopener noreferrer"></a>
+      <a class="community--link" href="https://fedsa.org" target="_blank" rel="noopener noreferrer">
         <h3>FEDSA</h3>
         <p>Front-end Developers South Africa (previously Cape Town Front-end Developers) is a registered non-profit organisation supporting the advancement of front-end development in South Africa (new website coming soon).</p>
       </a>
