--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -17,7 +17,7 @@ section: page
   </section>
 </section>
 
-<div class="with-bg p-t-48">
+<div class="with-bg p-t-48 p-b-48">
   <section class="two--column-50 container">
     <div>
       <h2>Community</h2>
