--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -21,7 +21,7 @@ section: page
   </article> -->
 </section>
 
-<div class="with-bg p-t-48">
+<div class="with-bg p-t-48 p-b-48">
   <section class="container two--column-50">
     <div>
       <h2>Teaching</h2>
