--- a/_includes/assets/css/sass/_layout.scss
+++ b/_includes/assets/css/sass/_layout.scss
@@ -126,6 +126,24 @@
 
 }
 
+
+.post--card {
+  color: var(--base);
+  text-decoration: none;
+
+  h4 {
+    color: var(--accent);
+    line-height: 1.2;
+  }
+
+  &:hover {
+    h4 {
+      text-decoration: underline;
+    }
+  }
+
+}
+
 .post--type {
   margin-bottom: 10px;
   color: #5a4bad;
