--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -38,7 +38,7 @@ section: page
           </figure>
           <div>
             <h4 class="m-t-0">Budget Justice Coalition</h4>
-            <p>Data platform for the Budget Justice Coalition, a civil society coalition.</p>
+            <p>Data platform for the Budget Justice Coalition, a civil society organisation.</p>
           </div>
         </a>
       </div>
