Add taget blank to link

--- a/_includes/components/home-components/hero.njk
+++ b/_includes/components/home-components/hero.njk
@@ -3,7 +3,7 @@
     <span class="home-header-indent">Front-end Developer</span>
   </h1>
   <p class="lead">
-    Hello, I'm <strong>Justin Slack</strong> &ndash; a team leader, UI designer, front-end developer, speaker and tech community organiser. I am currently head of design and front-end at <a href="https://nml.co.za">NML</a>, a software development company in Cape Town, South Africa.</p>
+    Hello, I'm <strong>Justin Slack</strong> &ndash; a team leader, UI designer, front-end developer, speaker and tech community organiser. I am currently head of design and front-end at <a href="https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a>, a software development company in Cape Town, South Africa.</p>
     <p>More about <a href="/about/">me</a>. More about <a href="/work/">my work</a></p>
   <!-- <article class="home-section">
     <h2>Current work</h2>
