--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -8,7 +8,7 @@ section: page
   <section class="two--column-50">
     <div>
       <p class="lead">My work lives at the intersection of design and code.</p>
-      <p>At <a href="http://https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a> I lead the design and front-end team. We are responsible for all UI design, front-end builds and design system creation. Over the last few years we have put in place design operations for a range of applications, from large financial services platforms to JAMstack based static sites.</p>
+      <p>At <a href="https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a> I lead the design and front-end team. We are responsible for all UI design, front-end builds and design system creation. Over the last few years we have put in place design operations for a range of applications, from large financial services platforms to JAMstack based static sites.</p>
       <p>Visit the NML <a target="_blank" href="https://nml.co.za/work/" rel="noopener noreferrer">Work</a> page for case studies of projects completed over the last six years.</p>
     </div>
     <figure class="page-image">
