--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -27,7 +27,7 @@ section: page
       <h2>Teaching</h2>
       <img src="/static/images/posts/fod.png" alt="Academy of Digital Arts" class="fod-logo">
       <p>For many years I taught UI design, HTML, CSS and JavaScript on both the full- and part-time programmes at the <a href="https://www.ada.ac.za/" target="_blank" rel="noopener noreferrer">Academy of Digital Arts</a> (formerly Friends of Design). In addition to teaching I designed course curricula, outcomes and study material for a range of student levels.</p>
-      <p>I continue to teach workshops and give talks at meetups and conferences. Read more about those activities on the <a href="/about/">About page</a>.</p>
+      <p>I continue to teach workshops and give talks at meetups and conferences. Read more about those activities on the <a href="/about/">About</a> page.</p>
     </div>
     <div>
       <h2>Personal projects</h2>
