--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="preload" href="styles.css" as="style">
-  <link rel="preload" crossorigin as="font" type="font/woff2" href="/static/fonts/SchnyderM-Demi-Web.woff2">
+  <link rel="preload" as="font" type="font/woff2" href="/static/fonts/SchnyderM-Demi-Web.woff2" crossorigin>
 
   {% set css %}
     {% include "assets/css/inline.css" %}
