--- a/_includes/assets/css/sass/_utilities.scss
+++ b/_includes/assets/css/sass/_utilities.scss
@@ -152,11 +152,31 @@
 
 // Margins
 
+.m-0 {
+  margin: 0;
+}
+
 .m-t-0 {
   margin-top: 0;
 }
 
+.m-b-0 {
+  margin-bottom: 0;
+}
+
+.m-b-8 {
+  margin-bottom: 0.5rem;
+}
+
+.m-b-16 {
+  margin-bottom: 1rem;
+}
+
 // Padding
+
+.p-16 {
+  padding: 1rem;
+}
 
 .p-b-48 {
   padding-bottom: 3rem;
