Add sitemap, add robots.txt

--- a/_includes/layouts/articles.njk
+++ b/_includes/layouts/articles.njk
@@ -6,7 +6,7 @@ section: page
   <h1 class="page--title">{{ title }}</h1>
 
   <div class="grid three--column--grid">
-    {%- for post in collections.posts | reverse -%}
+    {%- for post in collections.posts -%}
         <a href="{{ post.url | url }}" class="post--card flex flex--column box--shadow">
           <figure class="article--thumb block">
             <img src="{{ post.data.featuredImage }}" alt="">
