--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -24,10 +24,9 @@ permalink: /shows/index.html
 		  <div class="next--show-copy">
         <h3 class="show--card-name">
           Next show
-			    <span class="sub--title">28 August 2020</span>
+			    <span class="sub--title">28 September 2020</span>
 		    </h3>
-        <p class="show--summary">Miscellanea<br>
-        Songs for these times</p>
+        <p class="show--summary">Carl Craig</p>
       </div>
     </article>
     {% set showlist = collections.show %}
