Google site verification

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -11,6 +11,8 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
+  <meta name="google-site-verification" content="b51Zs_VHq8ALy7PS0Nf5rGQafLOqOU752SIQDojU6ng" />
+
   <link rel="preload" href="styles.css" as="style">
   <link rel="preload" as="font" type="font/woff2" href="/static/fonts/SchnyderM-Demi-Web.woff2" crossorigin>
 
