--- a/sitemap.njk
+++ b/sitemap.njk
@@ -4,11 +4,11 @@ eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-  {% for page in collections.all %}
-    <url>
-      <loc>{{ site.url }}{{ page.url | url }}</loc>
-      <lastmod>{{ page.date.toISOString() }}</lastmod>
-      <changefreq>{{page.data.changeFreq}}</changefreq>
-    </url>
-  {% endfor %}
+{%- for page in collections.all %}
+  {% set mappedUrl %}{{ metadata.url}}{{ page.url | url }}{% endset %}
+  <url>
+    <loc>{{ mappedUrl }}</loc>
+    <lastmod>{{ page.date.toISOString() }}</lastmod>
+  </url>
+{%- endfor %}
 </urlset>
