--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -13,13 +13,13 @@
 
   <meta name="google-site-verification" content="b51Zs_VHq8ALy7PS0Nf5rGQafLOqOU752SIQDojU6ng" />
 
-  <link rel="preload" href="styles.css" as="style">
-  <link rel="preload" as="font" type="font/woff2" href="/static/fonts/SchnyderM-Demi-Web.woff2" crossorigin>
-
   {% set css %}
     {% include "assets/css/inline.css" %}
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
+
+  <link rel="preload" crossorigin="anonymous" as="font" type="font/woff2" href="/static/fonts/SchnyderM-Demi-Web.woff2">
+  <link rel="preload" href="/_includes/assets/css/main.css" as="style">
 
   <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css">
 <!-- 
