--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -46,7 +46,7 @@ permalink: /shows/index.html
 					Next show
 					<span class="sub--title">23 October 2020</span>
 				</h3>
-				<p class="show--summary">hEAR</p>
+				<p class="show--summary">Indie rock</p>
 			</div>
 		</article>
 		{% set showlist = collections.show %} {% include "components/showlist.njk"
