Add talks and workshops page

--- a/_includes/layouts/about.njk
+++ b/_includes/layouts/about.njk
@@ -22,7 +22,7 @@ section: page
     <div>
       <h2>Community</h2>
       <p>Building communities is an essential part of what I do. In 2012 I co-founded the Cape Town Front-end Developer meetup and in 2019 the non-profit Front-end Developers South Africa. We have run over 80 monthly talks and workshops and at last count have over 2700 members.</p>
-      <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include DevConf, UX South Africa, The Developer User Group, The Scrum User Group and The Cape Town Dribbble Community.</p>
+      <p>In addition to organising community events I also <a href="/talks-and-workshops/#talks">speak</a> at conferences and meetups and have run a number of <a href="/talks-and-workshops/#workshops">workshops</a>. These include DevConf, UX South Africa, The Developer User Group, The Scrum User Group and The Cape Town Dribbble Community.</p>
       <p>I am a regular at the Codebridge Community Evening &ndash; a collaborative civic tech meetup &ndash; where I am part of a team of activists, designers, developers, data scientists and journalists working on a website and data platform for the Budget Justice Coalition, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
     </div>
     <div>
