--- a/_includes/components/home-components/hero.njk
+++ b/_includes/components/home-components/hero.njk
@@ -1,6 +1,7 @@
 <div class="main-home container">
   <h1 class="home-header">UI Designer,
-    <span class="home-header-indent">Front-end Developer</span>
+    <span class="home-header-indent">Front-end Developer,</span>
+    <span class="home-header-indent">Design Team Leader</span>
   </h1>
   <p class="lead">
     Hello, I'm <strong>Justin Slack</strong> &ndash; a team leader, UI designer, front-end developer, speaker and tech community organiser. I am currently head of design and front-end at <a href="https://nml.co.za" target="_blank" rel="noopener noreferrer">NML</a>, a software development company in Cape Town, South Africa.</p>
