--- a/_includes/layouts/radio-shows.njk
+++ b/_includes/layouts/radio-shows.njk
@@ -44,9 +44,9 @@ permalink: /shows/index.html
 			<div class="next--show-copy">
 				<h3 class="show--card-name">
 					Next show
-					<span class="sub--title">26 March 2021</span>
+					<span class="sub--title">23 April 2021</span>
 				</h3>
-				<p class="show--summary">TBC</p>
+				<p class="show--summary">New stuff. Finally.</p>
 			</div>
 		</article>
 		{% set showlist = collections.show %} {% include "components/showlist.njk"
