--- a/_includes/layouts/show.njk
+++ b/_includes/layouts/show.njk
@@ -9,7 +9,7 @@ section: post
     <span>{{ show }}</span>
     <p>
       <small>
-        <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
+        Last updated: <time datetime="{{ date | machineDate }}">{{ date | readableDate }}</time>
       </small>
     </p>
   </div>
