Add rpleoad attribute for chrome

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -18,8 +18,8 @@
   {% endset %}
   <style>{{ css | cssmin | safe }}</style>
 
-  <link href="/static/fonts/SchnyderM-Demi-Web.woff2"  rel="preload" crossorigin="anonymous" as="font" type="font/woff2" >
-  <link href="/_includes/assets/css/main.css" rel="preload" as="style">
+  <link href="/static/fonts/SchnyderM-Demi-Web.woff2" rel="preload" crossorigin="anonymous" as="font" type="font/woff2" >
+  <link href="/_includes/assets/css/main.css" rel="stylesheet preload" as="style">
 
   <link rel="stylesheet" type="text/css" href="/_includes/assets/css/main.css">
 <!-- 
